--- a/src/app/modules/auth/auth.component.scss
+++ b/src/app/modules/auth/auth.component.scss
@@ -1,10 +1,9 @@
 $gray-lighter: #eceeef !default;
-$image_path: "/assets/images/" !default;
+$image_path: '/assets/images/' !default;
 
 $prefix: 'sigin';
 
 .#{$prefix} {
-
   &-conainer {
     min-height: 100%;
     background-size: cover;
@@ -23,16 +22,14 @@ $prefix: 'sigin';
 }
 
 .help {
-
 }
 
 .is-danger {
-
+  color: red;
 }
 
 .redirect {
   font-size: 14px;
   margin-left: 10px;
-  color: #00AAAA;
+  color: #00aaaa;
 }
-
