--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -2,14 +2,16 @@
   fxLayout="column"
   fxFlexFill
   fxLayoutAlign="center center"
-  style="background-image:url('../../../assets/login11.jpg');
-height: 100%;
-background-repeat: no-repeat;
-background-position: center;
-background-size: cover; "
+  style="
+    background-image: url('../../../assets/login11.jpg');
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  "
 >
   <div fxLayout="column">
-    <div class=" mat-elevation-z4">
+    <div class="mat-elevation-z4">
       <mat-card>
         <mat-card-title
           >User login
@@ -24,6 +26,11 @@ background-size: cover; "
             [formGroup]="userForm"
             (ngSubmit)="login()"
           >
+            <div *ngIf="formMessages.all" class="help is-danger">
+              <mat-form-field class="full-width">
+                <legend>{{ formMessages.all }}</legend>
+              </mat-form-field>
+            </div>
             <mat-form-field class="full-width">
               <input
                 type="email"
@@ -35,8 +42,8 @@ background-size: cover; "
                 matInput
               />
             </mat-form-field>
-            <div *ngIf="formErrors.email" class="help is-danger">
-              {{ formErrors.email }}
+            <div *ngIf="formMessages.email" class="help is-danger">
+              {{ formMessages.email }}
             </div>
             <mat-form-field class="full-width">
               <input
@@ -49,15 +56,14 @@ background-size: cover; "
                 matInput
               />
             </mat-form-field>
-            <div *ngIf="formErrors.password" class="help is-danger">
-              {{ formErrors.password }}
+            <div *ngIf="formMessages.password" class="help is-danger">
+              {{ formMessages.password }}
             </div>
             <button
               mat-raised-button
               color="primary"
               type="submit"
               [disabled]="!userForm.valid"
-              (click)="login()"
             >
               {{ 'login' | translate | titlecase }}
             </button>
