--- a/src/app/modules/auth/register/register.component.html
+++ b/src/app/modules/auth/register/register.component.html
@@ -2,14 +2,16 @@
   fxLayout="column"
   fxFlexFill
   fxLayoutAlign="center center"
-  style="background-image:url('../../../assets/login11.jpg');
-height: 100%;
-background-repeat: no-repeat;
-background-position: center;
-background-size: cover; "
+  style="
+    background-image: url('../../../assets/login11.jpg');
+    height: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  "
 >
   <div fxLayout="column">
-    <div class=" mat-elevation-z4">
+    <div class="mat-elevation-z4">
       <mat-card>
         <mat-card-title
           >Register
@@ -35,8 +37,8 @@ background-size: cover; "
                 matInput
               />
             </mat-form-field>
-            <div *ngIf="formErrors.firstName" class="help is-danger">
-              {{ formErrors.firstName }}
+            <div *ngIf="formMessages.firstName" class="help is-danger">
+              {{ formMessages.firstName }}
             </div>
             <mat-form-field class="full-width">
               <input
@@ -49,8 +51,8 @@ background-size: cover; "
                 matInput
               />
             </mat-form-field>
-            <div *ngIf="formErrors.lastName" class="help is-danger">
-              {{ formErrors.lastName }}
+            <div *ngIf="formMessages.lastName" class="help is-danger">
+              {{ formMessages.lastName }}
             </div>
             <mat-form-field class="full-width">
               <input
@@ -63,8 +65,8 @@ background-size: cover; "
                 matInput
               />
             </mat-form-field>
-            <div *ngIf="formErrors.email" class="help is-danger">
-              {{ formErrors.email }}
+            <div *ngIf="formMessages.email" class="help is-danger">
+              {{ formMessages.email }}
             </div>
             <mat-form-field class="full-width">
               <input
@@ -77,8 +79,8 @@ background-size: cover; "
                 matInput
               />
             </mat-form-field>
-            <div *ngIf="formErrors.password" class="help is-danger">
-              {{ formErrors.password }}
+            <div *ngIf="formMessages.password" class="help is-danger">
+              {{ formMessages.password }}
             </div>
             <mat-form-field class="full-width">
               <input
@@ -91,8 +93,8 @@ background-size: cover; "
                 matInput
               />
             </mat-form-field>
-            <div *ngIf="formErrors.repeatPassword" class="help is-danger">
-              {{ formErrors.repeatPassword }}
+            <div *ngIf="formMessages.repeatPassword" class="help is-danger">
+              {{ formMessages.repeatPassword }}
             </div>
             <button
               mat-raised-button
