--- a/src/app/shared/components/user-menu/user-menu.component.html
+++ b/src/app/shared/components/user-menu/user-menu.component.html
@@ -37,7 +37,7 @@
         <mat-divider></mat-divider>
 
         <mat-list-item>
-          <a matLine>Logout</a>
+          <a matLine routerLink="/auth/logout">Logout</a>
           <button mat-icon-button><mat-icon>exit_to_app</mat-icon></button>
         </mat-list-item>
       </mat-nav-list>
