Added shared components to the Exports of SharedModule

--- a/src/app/modules/users/pages/user-edit/user-edit.component.html
+++ b/src/app/modules/users/pages/user-edit/user-edit.component.html
@@ -208,7 +208,7 @@
                 "
                 *ngFor="let part of allPartsGrouped.parts[meetingIndex]"
                 [selected]="partSelected(part)"
-                (click)="togglePart(part); userForm.pristine = false"
+                (click)="togglePart(part); userForm.markAllAsTouched()"
               >
                 {{ part.name | translate }}
               </mat-chip>
