--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,54 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import '~@angular/material/prebuilt-themes/purple-green.css';
+// @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
+// Import theming functions
+@import '~@angular/material/theming';
+
+@mixin theme-color-grabber($theme) {
+  $primary: map-get($theme, primary);
+  $accent: map-get($theme, accent);
+  $warn: map-get($theme, warn);
+
+  // Theme specific styles
+  .primaryColorBg {
+    background-color: mat-color($primary, 900);
+  }
+  .accentColorBg {
+    background-color: mat-color($accent);
+  }
+  .warnColorBg {
+    background-color: mat-color($warn);
+  }
+}
+
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
+
+button.mat-fab-bottom-right {
+  top: auto;
+  right: 20px;
+  bottom: 20px;
+  left: auto;
+  position: fixed;
+}
+
+/* Generic classes */
+.border {
+  border: 1px solid red;
+}
+
+.center {
+  text-align: center;
+}
+
+.bg-color-white {
+  background-color: white;
+}
