Fixing a bug with userList checkboxes

--- a/src/app/modules/users/pages/user-list/user-list.component.html
+++ b/src/app/modules/users/pages/user-list/user-list.component.html
@@ -187,7 +187,7 @@
           confirmButton="{{
             'dialog.delete.confirmation.confirmButton' | translate
           }}"
-          (confirmed)="delete(user._id)"
+          (confirmed)="delete([user._id])"
         >
           <!-- <mat-icon inline="true">delete</mat-icon> -->
 
