--- a/src/app/modules/assignments/pages/assignment-list/assignment-list.component.html
+++ b/src/app/modules/assignments/pages/assignment-list/assignment-list.component.html
@@ -14,12 +14,12 @@
       {{ 'Students' | translate | titlecase }}
     </ng-template>
     <ng-template matTabContent>
-      <app-assignment-midweek-students
-        *ngIf="selectedMonth"
-        [month]="selectedMonth"
-        (editMode)="disableNavigation($event)"
-      >
-      </app-assignment-midweek-students>
+      <!--<app-assignment-midweek-students-->
+        <!--  *ngIf="selectedMonth"-->
+        <!--  [month]="selectedMonth"-->
+        <!--  (editMode)="disableNavigation($event)"-->
+        <!-->-->
+        <!--</app-assignment-midweek-students>-->
 
       <!-- Inserted dynamic component here -->
       <div>
@@ -33,11 +33,11 @@
       {{ 'Christian Life and Ministry' | translate | titlecase }}
     </ng-template>
     <ng-template matTabContent>
-      <app-assignment-midweek
-        *ngIf="selectedMonth"
-        [month]="selectedMonth"
-        (editMode)="disableNavigation($event)"
-      ></app-assignment-midweek>
+      <!--<app-assignment-midweek-->
+      <!--  *ngIf="selectedMonth"-->
+      <!--  [month]="selectedMonth"-->
+      <!--  (editMode)="disableNavigation($event)"-->
+      <!--></app-assignment-midweek>-->
     </ng-template>
   </mat-tab>
 
