Working on assignments

--- a/src/app/modules/assignments/components/assignment-midweek/assignment-midweek.component.html
+++ b/src/app/modules/assignments/components/assignment-midweek/assignment-midweek.component.html
@@ -1,7 +1,7 @@
 <p>assignment-midweek works!</p>
 
-<p>
-  {{ week | translateDate: 'MMM-D' | async }}
-</p>
+<!--<p>-->
+  <!--  {{ week | translateDate: 'MMM-D' | async }}-->
+  <!--</p>-->
 
 <p>{{ '2019-09-16' | translateDate: 'DATE_SHORT' | async }}</p>
